# mandelbrot

./: Cargo.toml  package.json  pnpm-lock.yaml
public/: index.html
src/: lib.rs  logic.rs
