[package]
authors = ["nouka <t-nouka@oz-vision.co.jp>"]
edition = "2018"
name = "mandelbrot"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'Performance',
  'Window',
]
version = "0.3.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
